--- a/client/bower.json
+++ b/client/bower.json
@@ -26,6 +26,7 @@
     "html5shiv": "~3.7.3",
     "gmaps": "~0.4.18",
     "bootstrap-timepicker": "~0.5.1",
-    "sharrre": "~1.3.5"
+    "sharrre": "~1.3.5",
+    "bootstrap3-typeahead": "~3.1.1"
   }
 }
