google maps api key in env file
Se añade en el archivo .env la api key de google maps ya que ahora es
necesaria para el correcto funcionamiento

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ RECAPTCHA_PUBLIC = "public"
 RECAPTCHA_SECRET = "secret"
 
 GOOGLE_ANALYTICS = "ga_code"
+GOOGLE_MAPS_API_KEY = "AIzaSyDATKEyq2mIgB0w6wwkPxNHY0AYt45y6BM"
